--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-scripts": "5.0.0",
 		"sass": "^1.49.7",
 		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0"
+		"web-vitals": "^2.1.0",
+		"yup": "^0.32.11"
 	},
 	"scripts": {
 		"dev": "react-scripts start",
