--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ REACT_APP_BASE_API_URL=
 REACT_APP_CLOUDINARY_URL=
 REACT_APP_UPLOAD_PRESET=
 REACT_APP_CLOUD_NAME=
+REACT_APP_AUTH0_DOMAIN=
+REACT_APP_AUTH0_CLIENT_ID=
