--- a/package.json
+++ b/package.json
@@ -1,66 +1,69 @@
 {
-	"name": "event-lite",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@auth0/auth0-react": "^1.9.0",
-		"@reduxjs/toolkit": "^1.7.2",
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^12.0.0",
-		"@testing-library/user-event": "^13.2.1",
-		"@types/jest": "^27.0.1",
-		"@types/node": "^16.7.13",
-		"@types/react": "^17.0.20",
-		"@types/react-dom": "^17.0.9",
-		"axios": "^0.25.0",
-		"formik": "^2.2.9",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-redux": "^7.2.6",
-		"react-router-dom": "5.3.0",
-		"react-scripts": "5.0.0",
-		"sass": "^1.49.7",
-		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0",
-		"yup": "^0.32.11"
-	},
-	"scripts": {
-		"dev": "react-scripts start",
-		"build": "CI=false && react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@types/react-router-dom": "5.3.2",
-		"@typescript-eslint/eslint-plugin": "^5.11.0",
-		"@typescript-eslint/parser": "^5.11.0",
-		"eslint": "^8.9.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-import-resolver-typescript": "^2.5.0",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.28.0",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"prettier": "^2.5.1"
-	}
+    "name": "event-lite",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@auth0/auth0-react": "^1.9.0",
+        "@reduxjs/toolkit": "^1.7.2",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^17.0.20",
+        "@types/react-dom": "^17.0.9",
+        "axios": "^0.25.0",
+        "formik": "^2.2.9",
+        "react": "^17.0.2",
+        "react-datepicker": "^4.6.0",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "5.3.0",
+        "react-scripts": "5.0.0",
+        "react-select": "^5.2.2",
+        "sass": "^1.49.7",
+        "typescript": "^4.4.2",
+        "web-vitals": "^2.1.0",
+        "yup": "^0.32.11"
+    },
+    "scripts": {
+        "dev": "react-scripts start",
+        "build": "CI=false && react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/react-datepicker": "^4.3.4",
+        "@types/react-router-dom": "5.3.2",
+        "@typescript-eslint/eslint-plugin": "^5.11.0",
+        "@typescript-eslint/parser": "^5.11.0",
+        "eslint": "^8.9.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "prettier": "^2.5.1"
+    }
 }
