--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ REACT_APP_UPLOAD_PRESET=
 REACT_APP_CLOUD_NAME=
 REACT_APP_AUTH0_DOMAIN=
 REACT_APP_AUTH0_CLIENT_ID=
+REACT_APP_AUTH0_AUDIENCE
+
+
+REACT_APP_BASE_DEV_API_URL
