--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "scripts": {
         "dev": "react-scripts start",
         "build": "CI=false && react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "test": "react-scripts test"
     },
     "eslintConfig": {
         "extends": [
